2008-04-07  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/winver.h, README, configure.ac, data/help/changes.txt,
	data/help/header.txt, NEWS, CMakeLists.txt: Updated version, release
	date and changes.
	* src/being.cpp: Fixed crash on trying to show out of range emoticon.

2008-04-03  David Athay  <ko2fan@gmail.com>

	* src/game.cpp: Tweaked disconnect dialog, hoping to fix a crash bug.

2008-03-30  Dennis Friis  <peavey@placid.dk>

	* configure.ac: Updated for tmwdata split.

2008-03-27  Dennis Friis  <peavey@placid.dk>

	* src/gui/progressbar.cpp, src/gui/scrollarea.cpp: Revert progress bar
	changes and initialize mWalkTime.

2008-03-26  Dennis Friis  <peavey@placid.dk>

	* src/gui/progressbar.cpp, src/localplayer.cpp: Initialized some
	uninitialized variables.

2008-03-23  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/engine.h, src/gui/viewport.h, src/engine.cpp,
	src/net/playerhandler.cpp: Removed unnecessary forwarding method.

2008-03-16  Dennis Friis  <peavey@placid.dk>

	* The Mana World.dev: Updated Dev-C++ project file.

2008-03-11  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* data/graphics/gui/CMakeLists.txt, data/graphics/gui/Makefile.am:
	Removed unused image here too.

2008-03-11  Eugenio Favalli  <elvenprogrammer@themanaworld.org>

	* data/graphics/gui/attack_target.png: Removed unused image.

2008-03-09  Dennis Friis  <peavey@placid.dk>

	* src/game.cpp: Pressing escape in the quit dialog closes the dialog.
	* src/gui/chat.cpp, src/gui/chat.h: Fixed a bug with chat messages
	without a sender which include semicolons.
	* src/chat.cpp: Added "/clear" command to clear chat window.

2008-03-08  Philipp Sehmisch  <tmw@crushnet.org>

	* tools/tmxcopy/main.cpp, tools/tmxcopy/main.map.cpp,
	tools/tmxcopy/zlibutils.cpp: Fixed some width/height mixups in
	TMXCopy.

2008-03-07  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* data/*: Moved dynamically released data to its own module (tmwdata).

2008-03-07  Eugenio Favalli  <elvenprogrammer@themanaworld.org>
